--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "@auth/drizzle-adapter": "^1.10.0",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-form": "^1.14.1",
     "@tanstack/react-query": "^5.81.5",
@@ -16,7 +17,9 @@
     "@trpc/next": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
+    "@types/bcryptjs": "^3.0.0",
     "@types/pg": "^8.10.9",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "core": "workspace:*",
     "drizzle-orm": "^0.44.2",
