--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.16.3",
     "react-chartjs-2": "^5.3.0",
     "react-dropzone": "^14.3.8",
+    "resend": "^4.0.1",
     "superjson": "^2.2.2",
     "ui": "workspace:*",
     "uploadthing": "^7.7.3",
