--- a/environment.example
+++ b/environment.example
@@ -18,9 +18,10 @@ NEXTAUTH_URL="http://localhost:3000"
 NODE_ENV="development"
 
 # ================================
-# EMAIL SERVICE (Optional)
+# EMAIL SERVICE (Required for verification)
 # ================================
 RESEND_API_KEY="re_xxxxxxxxxx"
+EMAIL_FROM="CO2 Calculator <noreply@yourdomain.com>"
 
 # ================================
 # FILE UPLOADS (Optional)
